test/fail/issue-3426.mo
actor Counter {
  let r1 = {y=1};
  let r2 = {r1 and r1 with x = 1};
}